# localpkg

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  compose.yml  pytest.ini  setup.cfg
.github/workflows/: branch.yml  main.yml  tag.yml
localpkg/: main.py
tests/: test_cli.py
